# conda-recipes

./: .binstar.yml  .gitignore  0001-r-packages-base-Downgrade-from-3.3.2-to-3.3.1.patch  0001-r-packages-skeleton-cran-diffs-at-3.4.0-time.patch  CHANGELOG.txt  README.md  build_helper.py  tasks.py  workhorse_compiled.bat  workhorse_pure.bat
3proxy/: bld.bat  build.sh  meta.yaml
7za/: bld.bat  meta.yaml
BeautifulSoup/: meta.yaml
Boost/: build.sh  meta.yaml
Log4CXX/: build.sh  meta.yaml
OCE/: build.sh  meta.yaml  note.md
PyKDL/: build.sh  meta.yaml  run_test.py
abstract-rendering/: bld.bat  meta.yaml
adrest/: Meta.yaml
altgraph/: meta.yaml
amqp/: meta.yaml
amqplib/: meta.yaml
aniso8601/: meta.yaml
anyjson/: meta.yaml
apache-ant/: ant-script.py  bld.bat  meta.yaml
apache-libcloud/: meta.yaml
apache-maven/: bld.bat  build.sh  meta.yaml  mvn  mvn.bat
appdirs/: build.sh  meta.yaml
apr/: bld.bat  build.sh  meta.yaml
argcomplete/: meta.yaml  remove_setuptools.patch
argh/: Meta.yaml
args/: bld.bat  meta.yaml
arrow/: meta.yaml
aspell/: build.sh  meta.yaml  post-link.sh
aspen/: Meta.yaml
assimulo/: build.sh  meta.yaml  run_test.py
astcheck/: meta.yaml
astor/: meta.yaml
astroid/: meta.yaml
astropy/: run_test.py
astsearch/: meta.yaml
async/: Meta.yaml
atom-shell/: __init__.py  atomshell.py  bld.bat  build.sh  download_atom_windows.py  meta.yaml
aubio/: bld.bat  meta.yaml
msys2/m2w64-quantlib/: 0001-Add-win32-dll-and-no-undefined.patch  CMakeLists.txt  PKGBUILD  bld.bat  meta.yaml  msys2-build-via-PKGBUILD.sh
(+3589 files in other folders)
